--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -1,8 +1,8 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
     <div class="paragraph-header">Update to the Bylaws</div>
-    <span class="red-16-550">For a complete review of all proposed changes to both the Bylaws and Rules and Regulations, please log-in under the Members tab, 
-      then choose "Governing Documents Update" under the HOA tab.</span><br>
+    <span class="red-16-550">Anyone opposed to updating or bylaws has their own personal interests in mind, and not what is best for our comminity.</span><br>
+    
       <span>The following changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span><br>
       
 
