--- a/src/app/users/account/account.component.html
+++ b/src/app/users/account/account.component.html
@@ -11,8 +11,11 @@
       </div>
       <div class="edit-button" style="margin-top: 15px">
         <p-button label="Edit" icon="pi pi-file-edit" styleClass="p-button-sm"
-          (click)="showUpdateForm()"
-        ></p-button>
+          (click)="showUpdateForm()"></p-button>
+      </div>
+      <div class="edit-button" style="margin-top: 15px">
+          <p-button label="Log Out" icon="pi pi-lock" styleClass="p-button-sm"
+          (click)="logOut()"></p-button>
       </div>
     </div>
   </div>
