--- a/src/app/home/panel-middle/panel-middle.component.html
+++ b/src/app/home/panel-middle/panel-middle.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
     <div class="paragraph-header">Update to the Bylaws</div>
-    <span class="red-16-550">Anyone opposed to updating or bylaws has their own personal interests in mind, and not what is best for our comminity.</span><br>
+    <span class="red-16-550">Anyone opposed to updating our bylaws has their own personal interests in mind, and not what is best for our comminity.</span><br>
     
       <span>The following changes to the by-laws will eliminate the corruption and allow for a greatest participation of all our Members in the election process.</span><br>
       
