--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,9 @@
       <p-tabPanel header="About">
         <app-panel-top></app-panel-top>
       </p-tabPanel>
+      <p-tabPanel header="Corruption">
+        <app-corruption></app-corruption>
+      </p-tabPanel>
       <p-tabPanel header="Bylaws">
         <app-panel-middle></app-panel-middle>
       </p-tabPanel>
