--- a/src/app/home/panel-bottom/panel-bottom.component.html
+++ b/src/app/home/panel-bottom/panel-bottom.component.html
@@ -26,6 +26,6 @@
     
   </div>
   <div class="sidebar200">
-    <img class="images" src="assets\images\IMG_4003.jpg" />
+    <img class="images" src="assets\images\petition.jpg" />
   </div>
 </div>
