--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <p-tabPanel header="About">
         <app-panel-top></app-panel-top>
       </p-tabPanel>
-      <p-tabPanel header="Corruption">
+     <!--  <p-tabPanel header="Corruption">
         <app-corruption></app-corruption>
       </p-tabPanel>
       <p-tabPanel header="Bylaws">
@@ -12,7 +12,7 @@
       </p-tabPanel>
       <p-tabPanel header="Petition">
         <app-panel-bottom></app-panel-bottom>
-      </p-tabPanel>
+      </p-tabPanel> -->
     </p-tabView>
   </div>
 </div>
