--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -3,8 +3,7 @@
     <div class="paragraph-copy-bold">Why was the WST Advocacy Group formed?</div>
     <div class="paragraph-copy">
       The Westbury Square Townhomes Advocacy Group exists to bring Members together for a common cause and provide a means to make 
-        your voice heard. Together we can hold the Board accountable and put an end to the secretive, 
-      self-serving and corrupt boards that have been a hallmark of the past decade and more.
+        your voice heard. 
       Many of you are sick and tired of the political drama and have simply given up. You have no interest to get involved 
       or participate in the politics of our community.  We understand!  But...</div>
 
