--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -30,8 +30,11 @@
       
     </div>
 
-   
-    <div class="paragraph-copy">Click on the 'Members' button above and follow the instructions. This is a private web site.</div>
+    <div class="paragraph-copy-bold">January 2024 Annual Meeting</div>
+    <div class="paragraph-copy"> Four seats on the Board of Directors will be open and
+      we intend to fill those seats with on-site Members who are dedicated to open communication and transparent leadership.  If you cannot attend or wish not to attend, please 
+      grant your proxy vote to any member of WSTAG.  The only way to change our leadership is to win at the election! In this case, Every Vote Counts!
+      </div>
       <p-divider></p-divider>
     
    
