--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -1,42 +1,7 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
-    <div class="paragraph-copy-bold">Why was the WST Advocacy Group formed?</div>
-    <div class="paragraph-copy">
-      The Westbury Square Townhomes Advocacy Group exists to bring Members together for a common cause and provide a means to make 
-        your voice heard. 
-      Many of you are sick and tired of the political drama and have simply given up. You have no interest to get involved 
-      or participate in the politics of our community.  We understand!  But...</div>
-
-    <div class="paragraph-copy-bold">Now is the time to make a difference!</div>
-
-    <div class="paragraph-copy">As many of you know, there have been several efforts in the past to remove Board members or change 
-      the bylaws which have all fallen flat. They lacked the organization and communication necessary for a successful campaign for change.
-    We have that now.  Through this website and other social platforms we are better prepared to see this through than ever before.</div>
-
-    <div class="paragraph-copy-bold">We Need a Change of Management!</div>
-    <div class="paragraph-copy">
-      <li>Our reserve fund is at an all time low.</li> 
-      <li>A complete financial audit, required every year under the bylaws, has not been done since 2020.</li>
-      <li>An annual statement showing receipts, expenses and disbursements (as required by the bylaws) as not been prepared since 2020.</li>
-      <li>Monthly financial reports have not been updated since Feb 2022.</li>
-      <li>Minutes from the Quarterly Open Board of Director meetings have not been posted since June 2022.</li> 
-      <li>At the beginning of 2022 we were promised a rigourous effort to collect delinquent accounts, and still there have been no significant progress.</li> 
-      <li>Many roofs are still in need of replacing.</li> 
-      <li>Two of our three water boilers are in need of major repairs.</li>
-      <li>Almost half the the security cameras are out of commission.</li>
-      <li>Rodents and roaches are rampant in certain areas.</li>
-      <li>Laundry machines are constantly out of order and two machines missing all together.</li> 
-      
-      
+    <div class="">
+      <img  class="images" src="assets\images\2024MtgFlyer.png"/>
     </div>
-
-    <div class="paragraph-copy-bold">January 2024 Annual Meeting</div>
-    <div class="paragraph-copy"> Four seats on the Board of Directors will be open and
-      we intend to fill those seats with on-site Members who are dedicated to open communication and transparent leadership.  If you cannot attend or wish not to attend, please 
-      grant your proxy vote to any member of WSTAG.  The only way to change our leadership is to win at the election! In this case, Every Vote Counts!
-      </div>
-      <p-divider></p-divider>
     
-   
-
 </div>
