--- a/src/app/home/panel-top/panel-top.component.html
+++ b/src/app/home/panel-top/panel-top.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-container">
   <div class="not-sidebar">
     <div class="">
-      <img  class="images" src="assets\images\2024MtgFlyer.png"/>
+      <img  class="images" src="assets\images\AEFlyer.png"/>
     </div>
     
 </div>
